--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,40 @@
 body {
   background-color: #0f172a !important;
 }
+
+/* globals.css */
+.toggle-checkbox:checked + .toggle-label {
+  background-color: #4f46e5;
+}
+
+.toggle-checkbox:checked + .toggle-label:before {
+  transform: translateX(1.5rem);
+  background-color: #4f46e5;
+  background-color: #ffffff;
+}
+
+.toggle-label {
+  display: block;
+  overflow: hidden;
+  cursor: pointer;
+  border-radius: 9999px;
+  position: relative;
+  padding: 0;
+  height: 24px;
+  width: 48px;
+  border: 2px solid transparent;
+  background-color: #374151;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.toggle-label:before {
+  display: block;
+  border-radius: 9999px;
+  background: #d1d5db;
+  content: "";
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  transform: translateX(0);
+  transition: transform 0.2s ease-in-out, background-color 0.2s ease-in-out;
+}
